.provarCaches/00D5h000009Q6XQEA0/objects/provar__Metadata_Component_Coverage_Report__c.object
<CustomObject>
    <fields>
        <fullName>provar__Coverage_Report__c</fullName>
        <label>Coverage Report</label>
        <referenceTo>provar__Coverage_Report__c</referenceTo>
        <relationshipLabel>Metadata Component Coverage Reports</relationshipLabel>
        <relationshipName>Metadata_Component_Coverage_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Coverage__c</fullName>
        <formula>IF (
    provar__Number_of_Elements_Covered__c + provar__Number_of_Elements_Not_Covered__c &gt; 0,
    provar__Number_of_Elements_Covered__c / (provar__Number_of_Elements_Covered__c + provar__Number_of_Elements_Not_Covered__c),
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>provar__Metadata_Component__c</fullName>
        <label>Metadata Component</label>
        <referenceTo>provar__Metadata_Component__c</referenceTo>
        <relationshipLabel>Related Coverage Reports</relationshipLabel>
        <relationshipName>Metadata_Component_Coverage_Reports</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Number_of_Elements_Covered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Elements Covered</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Number_of_Elements_Not_Covered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Elements Not Covered</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Metadata Component Coverage Report</label>
    <nameField>
        <displayFormat>MCOV-{000000}</displayFormat>
        <label>Metadata Component Coverage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Component Coverage Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>